include/k4a/k4a.h


K4A_EXPORT uint32_t k4a_device_get_installed_count(void);
K4A_EXPORT k4a_result_t k4a_set_debug_message_handler(k4a_logging_message_cb_t *message_cb,
                                                      void *message_cb_context,
                                                      k4a_log_level_t min_level);
K4A_EXPORT k4a_result_t k4a_set_allocator(k4a_memory_allocate_cb_t allocate, k4a_memory_destroy_cb_t free);
K4A_EXPORT k4a_result_t k4a_device_open(uint32_t index, k4a_device_t *device_handle);
K4A_EXPORT void k4a_device_close(k4a_device_t device_handle);
K4A_EXPORT k4a_wait_result_t k4a_device_get_capture(k4a_device_t device_handle,
                                                    k4a_capture_t *capture_handle,
                                                    int32_t timeout_in_ms);
K4A_EXPORT k4a_wait_result_t k4a_device_get_imu_sample(k4a_device_t device_handle,
                                                       k4a_imu_sample_t *imu_sample,
                                                       int32_t timeout_in_ms);
K4A_EXPORT k4a_result_t k4a_capture_create(k4a_capture_t *capture_handle);
K4A_EXPORT void k4a_capture_release(k4a_capture_t capture_handle);
K4A_EXPORT void k4a_capture_reference(k4a_capture_t capture_handle);
K4A_EXPORT k4a_image_t k4a_capture_get_color_image(k4a_capture_t capture_handle);
K4A_EXPORT k4a_image_t k4a_capture_get_depth_image(k4a_capture_t capture_handle);
K4A_EXPORT k4a_image_t k4a_capture_get_ir_image(k4a_capture_t capture_handle);
K4A_EXPORT void k4a_capture_set_color_image(k4a_capture_t capture_handle, k4a_image_t image_handle);
K4A_EXPORT void k4a_capture_set_depth_image(k4a_capture_t capture_handle, k4a_image_t image_handle);
K4A_EXPORT void k4a_capture_set_ir_image(k4a_capture_t capture_handle, k4a_image_t image_handle);
K4A_EXPORT void k4a_capture_set_temperature_c(k4a_capture_t capture_handle, float temperature_c);
K4A_EXPORT float k4a_capture_get_temperature_c(k4a_capture_t capture_handle);
K4A_EXPORT k4a_result_t k4a_image_create(k4a_image_format_t format,
                                         int width_pixels,
                                         int height_pixels,
                                         int stride_bytes,
                                         k4a_image_t *image_handle);
K4A_EXPORT k4a_result_t k4a_image_create_from_buffer(k4a_image_format_t format,
                                                     int width_pixels,
                                                     int height_pixels,
                                                     int stride_bytes,
                                                     uint8_t *buffer,
                                                     size_t buffer_size,
                                                     k4a_memory_destroy_cb_t *buffer_release_cb,
                                                     void *buffer_release_cb_context,
                                                     k4a_image_t *image_handle);
K4A_EXPORT uint8_t *k4a_image_get_buffer(k4a_image_t image_handle);
K4A_EXPORT size_t k4a_image_get_size(k4a_image_t image_handle);
K4A_EXPORT k4a_image_format_t k4a_image_get_format(k4a_image_t image_handle);
K4A_EXPORT int k4a_image_get_width_pixels(k4a_image_t image_handle);
K4A_EXPORT int k4a_image_get_height_pixels(k4a_image_t image_handle);
K4A_EXPORT int k4a_image_get_stride_bytes(k4a_image_t image_handle);
K4A_EXPORT uint64_t k4a_image_get_device_timestamp_usec(k4a_image_t image_handle);
K4A_EXPORT uint64_t k4a_image_get_system_timestamp_nsec(k4a_image_t image_handle);
K4A_EXPORT uint64_t k4a_image_get_exposure_usec(k4a_image_t image_handle);
K4A_EXPORT uint32_t k4a_image_get_white_balance(k4a_image_t image_handle);
K4A_EXPORT uint32_t k4a_image_get_iso_speed(k4a_image_t image_handle);
K4A_EXPORT void k4a_image_set_device_timestamp_usec(k4a_image_t image_handle, uint64_t timestamp_usec);
K4A_EXPORT void k4a_image_set_system_timestamp_nsec(k4a_image_t image_handle, uint64_t timestamp_nsec);
K4A_EXPORT void k4a_image_set_exposure_usec(k4a_image_t image_handle, uint64_t exposure_usec);
K4A_EXPORT void k4a_image_set_white_balance(k4a_image_t image_handle, uint32_t white_balance);